--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,27 +1,51 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+body { 
+  font-family: "Work Sans", sans-serif;
+  background-color: hsl(13, 19%, 90%);
+  color: rgb(20, 19, 19);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.contaner  {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  margin: 2rem auto;
+}
+
+.valueContainer {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+}
+
+h1 {
+  text-align: center;
+}
+
+button {
+  background-color: hsl(13, 19%, 82%);
+  border: none;
+  padding: 0.5rem 1rem;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  border-radius: 4px;
+}
+  button:hover {
+    background-color: hsl(13, 19%, 76%);
+    cursor: pointer;
   }
+  button:active {
+    top: 2px;
+    position: relative;
+  }
+
+p {
+  text-align: center;
+  margin: 0;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.pitchValue {
+  font-size: 9rem;
+  padding: 2rem 0 0 0;
 }
